Archive/1362acfec1b6d02b6f495791436ecc02-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:25: error: ‘type_declaration_class’ does not name a type
 void pretty_print(const type_declaration_class klass)
                         ^
main.cpp:1:48: error: ISO C++ forbids declaration of ‘klass’ with no type [-fpermissive]
 void pretty_print(const type_declaration_class klass)
                                                ^
main.cpp: In function ‘void pretty_print(int)’:
main.cpp:4:9: error: ‘class_declaration’ was not declared in this scope
         class_declaration info = klass.type;
         ^
main.cpp:4:27: error: expected ‘;’ before ‘info’
         class_declaration info = klass.type;
                           ^
main.cpp:6:12: error: ‘info’ was not declared in this scope
         if(info.is_final)
            ^
main.cpp:8:13: error: ‘cout’ is not a member of ‘std’
             std::cout << "final ";
             ^
main.cpp:11:12: error: ‘info’ was not declared in this scope
         if(info.is_abstract)
            ^
main.cpp:13:13: error: ‘cout’ is not a member of ‘std’
             std::cout << "abstract ";
             ^
main.cpp:17:9: error: ‘cout’ is not a member of ‘std’
         std::cout << "class " << info.name.identifier_string << " extends " << name_to_string(info.extends);
         ^
main.cpp:17:34: error: ‘info’ was not declared in this scope
         std::cout << "class " << info.name.identifier_string << " extends " << name_to_string(info.extends);
                                  ^
main.cpp:17:107: error: ‘name_to_string’ was not declared in this scope
         std::cout << "class " << info.name.identifier_string << " extends " << name_to_string(info.extends);
                                                                                                           ^
main.cpp:23:13: error: ‘cout’ is not a member of ‘std’
             std::cout << " implements ";
             ^
main.cpp:24:13: error: ‘cout’ is not a member of ‘std’
             std::cout << concat(info.implements, name_to_string, ", ");
             ^
main.cpp:24:70: error: ‘concat’ was not declared in this scope
             std::cout << concat(info.implements, name_to_string, ", ");
                                                                      ^
main.cpp:27:9: error: ‘cout’ is not a member of ‘std’
         std::cout << std::endl;
         ^
main.cpp:27:22: error: ‘endl’ is not a member of ‘std’
         std::cout << std::endl;
                      ^
main.cpp:29:9: error: ‘cout’ is not a member of ‘std’
         std::cout << "{" << std::endl;
         ^
main.cpp:29:29: error: ‘endl’ is not a member of ‘std’
         std::cout << "{" << std::endl;
                             ^
main.cpp:31:47: error: ‘unpack_list’ was not declared in this scope
         unpack_list(info.members, pretty_print);
                                               ^
main.cpp:33:9: error: ‘cout’ is not a member of ‘std’
         std::cout << "}" << std::endl;
         ^
main.cpp:33:29: error: ‘endl’ is not a member of ‘std’
         std::cout << "}" << std::endl;
                             ^
